--- a/product-list.html
+++ b/product-list.html
@@ -28,9 +28,9 @@
 <script>
 // ▼ 本来はサーバーからもらうデータをサンプルとして定義
 const products = [
-    { id: 1, name: "ボールペン", image: "ballpen.jpg" },
-    { id: 2, name: "ノート", image: "note.jpg" },
-    { id: 3, name: "消しゴム", image: "keshigomu.jpg" }
+    { id: 1, name: "ボールペン", image: "ballpen.png" },
+    { id: 2, name: "ノート", image: "note.png" },
+    { id: 3, name: "消しゴム", image: "keshigomu.png" }
 ];
 
 // ▼ エラーメッセージ（必要なら JS でセット）
@@ -66,4 +66,5 @@ if (message) {
 
 </body>
 </html>
+
 
