--- a/detail.html
+++ b/detail.html
@@ -53,10 +53,10 @@
 // ▼ ballpen の商品データ（静的）
 const product = {
     id: 1,
-    name: "Ballpen（高品質ボールペン）",
+    name: "Ballpen",
     price: 120,
     stock: 120,
-    image: "ballpen.jpg",
+    image: "../ballpen.jpg",
     text: "滑らかな書き心地のボールペンです。"
 };
 
@@ -90,3 +90,4 @@ document.getElementById("c-btn").addEventListener("click", () => {
 
 </body>
 </html>
+
