--- a/detail.html
+++ b/detail.html
@@ -11,7 +11,7 @@
     <h1><a href="product-list.html">stationery shop</a></h1>
     <ul class="main-nav">
         <li><a href="cart.html" class="cart">
-            <img src="img/cart.png" alt="カート">
+            <img src="../cart.png" alt="カート">
             <span id="cart-count">0</span>
         </a></li>
         <li><a href="login.html" id="logout">ログアウト</a></li>
@@ -90,4 +90,5 @@ document.getElementById("c-btn").addEventListener("click", () => {
 
 </body>
 </html>
+
 
